# agent-framework

./: .env.example  .gitignore  .gitignore.k8s  ARCHITECTURE_DECISION.md  Dockerfile  KUBERNETES_MIGRATION_COMPLETE.md  MULTIMODAL_GUIDE.md  PRODUCTION_ARCHITECTURE.md  README.md  REDESIGN_SUMMARY.md  SETUP_GUIDE.md  SPOTIFY_ISSUE_SUMMARY.md  SPOTIFY_PLAYBACK_OPTIONS.md  SPOTIFY_SDK_SETUP.md  docker-compose.production.yml  docker-compose.yml  nginx.conf  pyproject.toml
docker/tempo/: tempo.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_FLOW.md  GETTING_STARTED.md  MCP_GUIDE.md  ROADMAP.md
examples/: combined_tools_example.py  eval_example.py  human_in_the_loop_example.py  mcp_sse_example.py  mcp_tools_example.py  memory_demo.py  react_agent_demo.py  tempo_tracing_demo.py  test_guardrails.py  test_mcp_native.py  test_memory_system.py
k8s/: README.md  backend-deployment.yaml  code-interpreter-configmap.yaml  code-interpreter-statefulset.yaml  configmap.yaml  deploy.ps1  deploy.sh  frontend-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-service.yaml  postgres-statefulset.yaml  pvc.yaml  secrets.yaml
notebooks/: docker-compose.yaml  open_search._rag_tool.ipynb  spotify_api_test.ipynb
notebooks/00_initial_pahse/: client_test.ipynb  gaurdrails_test.ipynb  hitl.ipynb  mcp_server.py  mcp_test.ipynb  start.ipynb
notebooks/tools/: code_interpreter.ipynb
public/: AGENT_ARCHITECTURE.md
public/docs/: API_REFERENCE.md  COMPONENT_SPECS.md  GETTING_STARTED.md  MCP_NATIVE_ARCHITECTURE.md
src/agent_framework/: __init__.py  exceptions.py  hooks.py  (+4 more)
(+66 files in other folders)
