[project]
name = "agent-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ravikumar Chavva", email = "chavvaravikumarreddy2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
]

[project.scripts]
agent-framework = "agent_framework:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
